Wed Aug  8 20:15:45 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - drivers/upscode2.c: Removed alarm_init() and alarm_commit(). You can
   only put something useful in the alarm buffer through alarm_set(), so
   if you don't call that, these are not needed either.

Mon Aug  6 14:15:53 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 * drivers/mge-hid.c:
   - add 'input.sensitivity' and 'ups.coldstart' (R/W)
   - allow to change 'output.voltage.nominal' and 'ups.load.high'
   - add 'output.powerfactor'
   - removed decimals from transfer voltages (makes no sense to specify
     these with that kind of precision)
   - cleaned up some functions (indentation, use of sprintf iso snprintf,
     flow, etc)

Fri Aug  3 12:31:20 UTC 2007 / Kjell Claesson <kjell.claesson@epost.tidanet.se>

 - Changed Driver version to 0.13 and fixed bug in upsdrv_shutdown. Did not read
   the shutdown delay from the config file. So the delay become zero.

Wed Aug  1 19:24:25 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - drivers/mge-hid.c: fix 'battery.voltage.nominal' for Evolution 650
   and remove decimals from '*.nominal' values

Wed Aug  1 19:20:33 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - drivers/belkin-hid.c, drivers/usbhid-ups.c: workaround for
   incorrect report over the interrupt pipeline that caused spurious
   low battery warnings

Tue Jul 31 19:41:24 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - drivers/apcsmart.[ch]: add support for old APC SmartUPS 1250 (the
   changes are small, so I don't see a reason why not to include it)

http://lists.alioth.debian.org/pipermail/nut-upsdev/2007-July/002345.html

Tue Jul 31 18:46:33 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - drivers/mge-hid.c: reformatted 'mge_hid2nut[]' table to always break
   at the same place (which is easier on my eyes)

Tue Jul 31 18:21:56 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 * drivers/mge-hid.c:
   - fixed broken 'output.voltage.nominal' which was actually indicating the